--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
-main {
+/*/main {
     max-width: 840px;
-}
+}/*/
 
 
 nav {
@@ -18,8 +18,8 @@ h1 {
     color: steelblue;
 }
 
-main img {
-    width: 150;
+img {
+    width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
@@ -28,7 +28,6 @@ main img {
 
 
 p { padding: 0;}
-
 
 
 aside {
