completion of white water rafting

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
-/*/main {
+main {
     max-width: 840px;
-}/*/
+}
 
 
 nav {
@@ -19,6 +19,14 @@ h1 {
 }
 
 img {
+    width: 150px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+}
+
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
