--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -20,8 +20,8 @@
 
 body {
     font-family: var(--paragraph-font);
-    max-width: 960 pixels;
-    padding: 20;
+    max-width: 960 px;
+    padding: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
