--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,13 +18,13 @@ h1 {
     color: steelblue;
 }
 
-img {
+/*img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
-}
+}*/
 
 main img {
     width: 150px;
@@ -39,9 +39,9 @@ p { padding: 0;}
 
 
 aside {
-    margin: lem;
-    border: 1px solid rgba (0, 0, 0, 0, 2); 
-    padding: lem;
+    margin: 1em;
+    border: 1px solid rgba(0, 0, 0, 2); 
+    padding: 1em;
     background-color: #eee;
     color: #333;
     text-align: center;
@@ -49,10 +49,11 @@ aside {
 
 aside img {
     width: 200px;
-    height: auto;}
+    height: auto;
+}
 
 footer {
-    margin-top: lem;
+    margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
 }
