--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+* { /*This is a universal wildcard function*/
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+}
+
+
 main {
     max-width: 840px;
 }
@@ -16,6 +24,7 @@ nav a {
 
 h1 {
     color: steelblue;
+    margin: 1rem;
 }
 
 /*img {
@@ -27,6 +36,8 @@ h1 {
 }*/
 
 main img {
+    /*position: top right;*/
+    float: right;
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -35,16 +46,29 @@ main img {
 }
 
 
-p { padding: 0;}
+p { 
+    padding: 0;
+    margin: 1rem;
+}
 
+
+
+aside h2 {
+    position: relative;
+    top: 0px;
+    left: 10px;
+
+}
 
 aside {
+    
     margin: 1em;
     border: 1px solid rgba(0, 0, 0, 2); 
     padding: 1em;
     background-color: #eee;
     color: #333;
     text-align: center;
+    width: 20em;
 }
 
 aside img {
@@ -57,3 +81,14 @@ footer {
     border-top: 1px solid #000;
     text-align: center;
 }
+
+ 
+/* Class Selectors*/
+.box {
+    margin: 1rem;
+    border: 1rem;
+    padding: 1rem;
+    background-color: rgb(187, 191, 194);
+    color: #000;
+}
+
