--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,11 @@ h1 {
     text-decoration: none;
 }
 
+aside P{
+    margin: 2px;
+    padding: 2PX;
+}
+
 /*img {
     width: 150px;
     height: auto;
@@ -45,22 +50,27 @@ main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
-    padding: 2px;
+    padding: 10px;
     box-shadow: 0 0 30px gray;
+    margin-top: -50px;
 }
 
 
 p { 
-    padding: 0;
+    padding: 0px;
     margin: 1rem;
+    text-align: justify;
+    margin-right:165px;
 }
 
 
 
 aside h2 {
-    position: relative;
-    top: 0px;
-    left: 10px;
+    position: absolute;
+    top:0px;
+    left: 110px;
+    margin: 11px;
+    
 
 }
 
@@ -73,11 +83,16 @@ aside {
     color: #333;
     text-align: center;
     width: 20em;
+    position: relative;
 }
 
 aside img {
-    width: 200px;
+    width: 300px;
     height: auto;
+    margin-top: 20PX;
+    text-align: center;
+    padding-right: 10px;
+    
 }
 
 footer {
@@ -87,7 +102,7 @@ footer {
 }
 
  
-/* Class Selectors*/
+/* Class Selectors */
 .box {
     margin: 1rem;
     border: 1rem;
