--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,35 +6,68 @@
 }
 
 
-main {
+header,.grid, footer {
     max-width: 840px;
+    margin: 0 auto;
+
 }
 
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    
 }
 
 h1 {
     color: steelblue;
     margin: 1rem;
+    border-bottom:2px solid steelblue;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.box a, nav a {
+
+
+ul a {
     text-decoration: none;
+    padding-left:px;
 }
 
 aside P{
     margin: 2px;
     padding: 2PX;
 }
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column:2/3 ;
+}
+
+aside{
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+
+}
+
+
 
 /*img {
     width: 150px;
@@ -50,9 +83,9 @@ main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
-    padding: 10px;
+    padding: 2px;
     box-shadow: 0 0 30px gray;
-    margin-top: -50px;
+    margin-top: 0px;
 }
 
 
@@ -61,6 +94,8 @@ p {
     margin: 1rem;
     text-align: justify;
     margin-right:165px;
+    font-family: Arial, sans-serif;
+    font-size: 12pt;
 }
 
 
@@ -86,6 +121,7 @@ aside {
     text-align: center;
     width: 20em;
     position: relative;
+    
 }
 
 aside img {
@@ -100,6 +136,10 @@ aside img {
 footer {
     margin-top: 1em;
     border-top: 1px solid #000;
+   
+}
+
+footer p {
     text-align: center;
 }
 
@@ -112,4 +152,6 @@ footer {
     background-color: rgb(187, 191, 194);
     color: #000;
 }
+
+
 
