--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -24,7 +24,6 @@
 .hero {
     width: 100%;
     position: relative;
-    height: 450px;
     background: radial-gradient(#c5283dff, #011627ff); 
 
 }
@@ -85,11 +84,11 @@ h2 {
 
 }
 
-.hero h1 {
+h1 {
     position: absolute;
-    margin: 40px;
-    top: 1px;
-    left: 350px;
+    margin: 70px;
+    top: 90px;
+    left: 400px;
     text-align: center;
     font-family: var(--heading-font);
     color: rgb(151, 208, 226);
@@ -98,53 +97,25 @@ h2 {
 
 }
 
-
-article {
-    display: flex;
+.hero p {
     position: absolute;
-    margin: 100px;
-    top: 100px;
+    margin: 60px;
+    top: 250px;
     left: 100px;
-    text-align:left;
-    background: var(--accent1-color);
-    box-shadow: 0 0 25px #000000;
     text-align: center;
-    justify-content: space-around;    
-
-}
-
-.box1 {
-    min-height: 100px;
-    padding: 10px;
-    text-align: left;
+    font-family: var(--heading-font);
     color: #ffffff;
-    font-family: var(--paragraph-font);
-    font-size: 14px;
-
+    font-size: 70%;
+    text-shadow: 0 0 25px #000000;
 }
 
-.box2 {
-    min-height: 100px;
-    padding: 10px;
-    text-align: left;
-    align-self: auto;
-    
-}
+
 
 .box1 p {
     padding-top:40px;
     
 }
 
-
-
-
-.box2 img{
-    width: 200px;
-    height: auto;
-    opacity: unset;
-    
-}
 
 h3 {  
     position: absolute;
@@ -160,7 +131,7 @@ nav a {
 } 
      
 section {
-    margin: 1em;
+    margin: 0.5em;
 }
 
 section h2{
@@ -170,27 +141,25 @@ section h2{
 }
 
 #third {
+    margin: 0px;
     width: 100%;
-    height: 400%;
-    background-color: antiquewhite;
+    height: 250%
+    
 
 }
 
 .flex4 {
     display: flex;
-    background-color: antiquewhite;
-    justify-content: space-around;
-    
+    height: 400px;
+    justify-content:space-around;
     
 }
 
 .flex4 div {
-    width: 220px;
-    height: 150px;
+    width: 350px;
+    height: 300px;
     border-radius: 10px;
-    color:white;
-    background-color: var(--secondary-color);
-    
+    color:rgb(14, 7, 7);  
 
 }
 
@@ -198,13 +167,32 @@ section h2{
     width: 100%;
     height: 80%;
     justify-content: center;
+    border-radius: 90px;
+    padding: 10px;
+    border: solid rgb(255, 255, 255)
+    
     
 }
 
 .flex4 div p {
-    text-align: center;   
+    text-align: left;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: small;
 
 }
+
+#mapform {
+    display: flex;
+    background-color: antiquewhite;
+   
+}
+
+#right {
+    background-color: #ffffff;
+    padding: 0.5rem;
+    
+}
+
 
 .flex5 {
     display: flex;
@@ -227,3 +215,107 @@ section h2{
     padding: 3px;
     text-align:end
 }
+
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.2em;
+    color: #333;
+    background-color: #fff;
+}
+
+
+#flexform h1 {
+    margin: 1rem;
+    font-size: 1.5em;
+    color: navy;
+    text-align: center;
+}
+
+form {
+    width: 400px;
+    margin: 0 auto;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color: #eee;
+    display: grid;
+    box-shadow: 0 0 25px #000000;
+}
+
+fieldset{
+    display: grid;
+    grid-gap: .5rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+
+}
+
+legend {
+    padding: 0.5rem;
+    color: navy;
+    font-size: 1.0em;
+}
+
+label, input, button, select, textarea {
+    font-family: 'Roboto', sans-serif;
+
+}
+
+label {
+    text-align: left;
+    padding-right: 0rem;
+}
+
+input, select, textarea {
+     font-size: 1.5rem;
+}
+
+input[type="checkbox"] {
+    width: 22px;
+    height: 22px;
+    vertical-align: bottom;
+}
+
+button {
+    margin: 1rem;
+    background-color: navy;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+
+button:hover {
+    background-color: darkgreen;
+
+}
+
+
+
+.form-item {
+    display: grid;
+    align-items: center;
+
+}
+
+.column1 {
+    grid-template-columns: 3fr 1fr;
+    
+}
+
+#radio, label, #feedback {
+    font-size: 1.0rem;
+    width: 100%;
+}
+
+
+
+#right p {
+    margin-top: 1.5rem ;
+    padding: 0.5rem;
+ 
+}
+
+
+
