--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -227,3 +227,206 @@ section h2{
     padding: 3px;
     text-align:end
 }
+
+
+#happy1 {
+    width: 100%;
+    position: relative;     
+
+}
+
+#happy1 div img {
+    
+    width: 100%;
+    filter: blur(4px);
+    opacity: 85%;
+
+    
+}
+
+#happy1 div {
+    border-top: solid #a67535 7px;
+    border-bottom: solid #a67535 7px;
+    background-color: rgb(139, 90, 16);
+    
+}
+
+#happy1 h1 {
+    position: absolute;
+    margin: 70px;
+    top: 90px;
+    left: 400px;
+    text-align: center;
+    font-family: var(--heading-font);
+    color: rgb(151, 208, 226);
+    font-size: 50pt;
+    text-shadow: 0 0 25px #000000;
+
+}
+
+#happy1 p {
+    position: absolute;
+    margin: 60px;
+    top: 250px;
+    left: 100px;
+    text-align: center;
+    font-family: var(--heading-font);
+    color: #ffffff;
+    font-size: 12pt;
+    text-shadow: 0 0 25px #000000;
+}
+
+#happy2 {
+    margin: 0px;
+    width: 100%;
+    height: 250%
+}
+
+#staffs {
+    display: flex;
+    height: 400px;
+    justify-content:space-around;
+    
+}
+
+#staffs div {
+    width: 350px;
+    height: 300px;
+    border-radius: 10px;
+    color:rgb(14, 7, 7);  
+}
+
+#staffs div img{
+    width: 100%;
+    height: 80%;
+    justify-content: center;
+    border-radius: 90px;
+    padding: 10px;
+    border: solid rgb(104, 24, 24)
+}
+
+#staffs div p {
+    text-align: left;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: small;
+
+}
+
+#mapform {
+    display: flex;
+    background-color: antiquewhite;
+   
+}
+
+#right {
+    background-color: #ffffff;
+    padding: 0.5rem;
+    
+}
+
+#flexform h1 {
+    margin: 1rem;
+    font-size: 1.5em;
+    color: navy;
+    text-align: left;
+}
+
+form {
+    width: 400px;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color: #ebf8e6;
+    display: grid;
+    
+}
+
+fieldset{
+    display: grid;
+    grid-gap: 0.5rem;
+    margin: 0.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 0.5rem;
+    height: 420px;
+
+}
+
+legend {
+    padding: 0.5rem;
+    color: navy;
+    font-size: 1.0em;
+}
+
+label, input, button, select, textarea {
+    font-family: 'Roboto', sans-serif;
+
+}
+
+label {
+    text-align: left;
+    
+}
+
+input, textarea {
+     font-size: 1.5rem;
+    
+}
+
+.form-item {
+    display: grid;
+    align-items: center;
+    margin: 0rem;
+}
+
+input[type="checkbox"], [type="radio"] {
+    width: 22px;
+    height: 22px;
+}
+
+button {
+    margin: 1rem;
+    background-color: rgb(0, 128, 115);
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+
+button:hover {
+    background-color: rgb(80, 199, 16);
+
+}
+
+
+
+.column1 {
+    grid-template-columns: 3fr 0fr;
+    
+}
+
+
+#selection, label, #feedback, #fullname, #useremail {
+    font-size: 1rem;
+    width: 100%;
+
+}
+
+#selection,  #fullname, #useremail{
+    height: 30px;
+}
+
+
+#right p {
+    margin-top: 1rem ;
+ 
+}
+
+.column1 {
+    grid-template-columns: 3fr 1fr;
+    margin: 0.5rem 0;
+}
+
+#newsletter {
+    font-size: 12pt;
+    text-align: left;
+}
