--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -234,6 +234,8 @@ section h2{
 }
 
 
+/*Applying CSS for contact*/
+
 #happy1 {
     width: 100%;
     position: relative;     
@@ -436,6 +438,12 @@ button:hover {
     text-align: left;
 }
 
+
+
+
+/*Applying CSS for trips*/
+
+
 #backdrop {
     background-color: aqua;
     background-image: url("../images/waterbackround.jpg");
@@ -587,3 +595,181 @@ tr p{
    
     padding: 0px;
 }
+
+/*css for home page*/
+
+#bigpx {
+    background-image: url(../images/hero_transparency_1024.png);
+    background-size:cover;
+    width: 100%;    
+    background-color: #ffffff;
+    height: 700px;
+
+
+
+    
+}
+
+.homeflex {
+    display:flex;
+    align-items: center;
+    width: 100%;
+    
+}
+
+.homeflex nav {
+    width: 100%;        
+    display: flex;
+    justify-content: space-around;
+     align-items: center;
+    justify-content: space-between;
+    
+}
+
+.homeflex nav a {
+    background-color: #c5283dff;
+    border-radius: 1em;
+    padding: 0px 4px 0px 4px;
+    color: #ffffff;
+    
+}
+
+.homeflex div{
+    margin: 0;
+    box-shadow: 20  10px;
+}
+
+.padding1 h2 {
+    bottom: 1px;
+    left: 300px;
+    padding-top: 0;
+    font-family: var(--heading-font);
+    color: #e09711;
+    font-size: 45pt;
+    text-shadow: 5px 10px 10px #5d0303;
+    position: absolute;
+    
+}
+
+.padding1 p {
+    padding-top:5%;
+    font-family: var(--heading-font);
+    color: #190647;
+    font-size: 15pt;
+    text-shadow: 10px 10 25px #000000;
+    text-align: center;
+    margin: 10%;
+
+}
+
+.padding1 button {
+    position: absolute;
+    left: 40rem;
+    bottom: 80px;
+    text-align: center;
+    margin-left: 0rem;
+    box-shadow: 8px 10px 25px rgb(96, 10, 10);
+    background-color: #a67535;
+    
+}
+
+.padding1 button:hover {
+    background-color: rgb(16, 71, 199);
+
+
+}
+
+
+
+#homeflex2 {
+    display: flex;
+    height: 400px;
+    width: 1200px;
+    justify-content:space-between;
+    align-items: center;
+    position: relative;
+    
+
+}
+
+#homeflex2 div {
+    width: 250px;
+    height: 200px;
+    border:#a67535;
+    color:rgb(14, 7, 7);  
+}
+
+#homeflex2 div img{
+    width: 100%;
+    height: 80%;
+    justify-content: center;
+    border: solid #a67535;
+    box-shadow: 0 0 10px;
+}
+
+#part2flex div h4 {
+    text-align: left;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: small;
+    color: #a67535;
+}
+
+
+#homeflex2 div p {
+    text-align: left;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: small;
+}
+
+#homeflex3 {
+    display: flex;
+    position: relative;
+    width: 100%;
+    background-color: var(--secondary-color);
+    
+
+    }
+
+#homeflex3 div img {
+    width: 600x;
+    height: 450px;
+    justify-content: flex-end;
+    align-items: stretch;
+    
+}
+
+#homeflex3 div {
+    display: grid;
+
+    
+}
+
+
+#layerbox {
+    
+    right: 100px;
+    top: 25px;
+    display: grid;
+    left: 25px;
+    align-content: center;
+}
+
+#middle button {
+    position: centter;
+    margin-left: 20px;
+    top: 1118px;
+    left: 600px;
+    position: absolute;
+    background-color: #a67535;
+
+}
+
+#middle button:hover {
+    background-color: hsl(324, 93%, 59%);
+}
+
+
+
+
+
+
